# bookbot

./: .gitignore  README.md  debug_backward.py  dev.ipynb  fileloaders.py  layers.py  main.py  models.py  net.py  nnutils.py  optimizers.py  preprocessing.py  processors.py  pyproject.toml  samplers.py  test_input.txt  tokenizers.py  utils.py  visualizations.py
tests/: test_attention_parts.py  test_debug.py  test_fix.py  test_layers.py  test_original.py  test_params.py
