[tool.poetry]
name = "bookbot"
version = "0.1.0"
description = "a package that trains a simple neural net to imitate the given pdf books."
authors = ["Alper Balbay <itsc0508@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.3.0"
isort = "^5.13.2"
numpy = "^1.26.4"
pypdf = "^4.2.0"
tqdm = "^4.66.4"
pre-commit = "^3.7.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.4"
ipython = "^8.26.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
