[project]
name = "bookbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "isort>=6.0.1",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "pre-commit>=4.2.0",
    "pypdf>=5.5.0",
    "scikit-learn>=1.6.1",
    "torch>=2.7.0",
    "tqdm>=4.67.1",
]
