[project]
name = "bookbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipython>=8.26.0",
    "isort>=5.13.2",
    "jupyter>=1.0.0",
    "matplotlib>=3.9.1",
    "mypy>=1.11.1",
    "numpy>=1.26.4",
    "pre-commit>=3.7.1",
    "pypdf>=4.2.0",
    "ruff>=0.4.4",
    "scikit-learn>=1.5.1",
    "torch>=2.10.0",
    "tqdm>=4.66.4",
    "weightwatcher>=0.7.6",
]
